--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
     </div>
 
     <div class="content">
-        <h2>INFORMASI SEKOLAH</h2>
+        <h2>INFORMASI SEKOLAH SMAK STIA BAKTI RUTENG</h2>
         <hr>
 
         <div id="pengertian" class="info-box" style="display:none;">
@@ -147,7 +147,7 @@
         </div>
 
         <div class="info-box">
-            <h3>Informasi Sekolah</h3>
+            <h3></h3>
             <p><strong>Nama Sekolah:</strong> SMAK Setia Bakti Ruteng</p>
             <p><strong>Alamat:</strong> Jl. Ahmad Yani No. 6, Ruteng, Flores – NTT</p>
             <p><strong>Status:</strong> Sekolah Swasta Katolik</p>
